force-app/main/default/objects/NewsNotificationCenter__c/NewsNotificationCenter__c.object-meta.xml
<CustomObject>
    <description>Oggetto per la gestione dell&apos;invio delle notifiche alla pubblicazione di una news verso specifici ruoli in base alle DataCategories associate all&apos;articolo di News</description>
    <label>Regola Notifiche News</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regole Notifiche News</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>