force-app/main/default/objects/NewsNotificationCenter__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stabilisce se la regola è attiva</description>
    <label>Attiva</label>
    <type>Checkbox</type>
</CustomField>