force-app/main/default/objects/NewsNotificationCenter__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Data Category Group Cluster</description>
    <label>Cluster</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Cluster</valueSetName>
    </valueSet>
</CustomField>