force-app/main/default/objects/NewsNotificationCenter__c/fields/EntryChannel__c.field-meta.xml
<CustomField>
    <fullName>EntryChannel__c</fullName>
    <description>Data Category Group Canale</description>
    <label>Canale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sportello</fullName>
            </value>
            <value>
                <fullName>Call Center Inbound</fullName>
            </value>
            <value>
                <fullName>SOL e App</fullName>
            </value>
            <value>
                <fullName>Teleselling Outbound</fullName>
            </value>
            <value>
                <fullName>Agenti D2D</fullName>
            </value>
            <value>
                <fullName>Protocollo</fullName>
            </value>
            <value>
                <fullName>Back-office</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Sportello Amministratori Condominio</fullName>
            </value>
            <value>
                <fullName>Tutti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>