force-app/main/default/objects/NewsNotificationCenter__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Ruoli a cui inviare notifica</description>
    <label>Ruolo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Front Office AAA-EBT</fullName>
            </value>
            <value>
                <fullName>Front Office HERA COMM</fullName>
            </value>
            <value>
                <fullName>Front Office MMS</fullName>
            </value>
            <value>
                <fullName>Front Office Reseller</fullName>
            </value>
            <value>
                <fullName>ADDETTO SPORTELLI</fullName>
                <isActive>false</isActive>
                <label>ADDETTO SPORTELLI</label>
            </value>
            <value>
                <fullName>ADDETTO VENDITA CRM</fullName>
                <isActive>false</isActive>
                <label>ADDETTO VENDITA CRM</label>
            </value>
            <value>
                <fullName>Addetto Back Office</fullName>
                <isActive>false</isActive>
                <label>Addetto Back Office</label>
            </value>
            <value>
                <fullName>Addetto Contact Center</fullName>
                <isActive>false</isActive>
                <label>Addetto Contact Center</label>
            </value>
            <value>
                <fullName>Addetto Esercizio Sistemi Clienti</fullName>
                <isActive>false</isActive>
                <label>Addetto Esercizio Sistemi Clienti</label>
            </value>
            <value>
                <fullName>Addetto Gestione del Credito</fullName>
                <isActive>false</isActive>
                <label>Addetto Gestione del Credito</label>
            </value>
            <value>
                <fullName>Addetto Order Management</fullName>
                <isActive>false</isActive>
                <label>Addetto Order Management</label>
            </value>
            <value>
                <fullName>Addetto Processi Transazionali</fullName>
                <isActive>false</isActive>
                <label>Addetto Processi Transazionali</label>
            </value>
            <value>
                <fullName>Addetto Programmazione Operativa e Monitoraggio</fullName>
                <isActive>false</isActive>
                <label>Addetto Programmazione Operativa e Monitoraggio</label>
            </value>
            <value>
                <fullName>Addetto Quality Assurance</fullName>
                <isActive>false</isActive>
                <label>Addetto Quality Assurance</label>
            </value>
            <value>
                <fullName>Addetto Supporto Tecnico Amministrativo</fullName>
                <isActive>false</isActive>
                <label>Addetto Supporto Tecnico Amministrativo</label>
            </value>
            <value>
                <fullName>Addetto Supporto Vendita</fullName>
                <isActive>false</isActive>
                <label>Addetto Supporto Vendita</label>
            </value>
            <value>
                <fullName>COORDINATORE SPORTELLI</fullName>
                <isActive>false</isActive>
                <label>COORDINATORE SPORTELLI</label>
            </value>
            <value>
                <fullName>Coordinatore Contact Center</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Contact Center</label>
            </value>
            <value>
                <fullName>Coordinatore Customer Value Management e Back Office</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Customer Value Management e Back Office</label>
            </value>
            <value>
                <fullName>Coordinatore Esercizio Sistemi Clienti</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Esercizio Sistemi Clienti</label>
            </value>
            <value>
                <fullName>Coordinatore Order Management</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Order Management</label>
            </value>
            <value>
                <fullName>Coordinatore Processi Transazionali</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Processi Transazionali</label>
            </value>
            <value>
                <fullName>Coordinatore Programmazione Operativa e Monitoraggio</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Programmazione Operativa e Monitoraggio</label>
            </value>
            <value>
                <fullName>Coordinatore Quality Assurance</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Quality Assurance</label>
            </value>
            <value>
                <fullName>Coordinatore Reporting</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Reporting</label>
            </value>
            <value>
                <fullName>Coordinatore Supporto Vendita</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Supporto Vendita</label>
            </value>
            <value>
                <fullName>Coordinatore Vendita</fullName>
                <isActive>false</isActive>
                <label>Coordinatore Vendita</label>
            </value>
            <value>
                <fullName>Responsabile Contact Center</fullName>
                <isActive>false</isActive>
                <label>Responsabile Contact Center</label>
            </value>
            <value>
                <fullName>Responsabile Customer Data Operations</fullName>
                <isActive>false</isActive>
                <label>Responsabile Customer Data Operations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>