force-app/main/default/objects/NewsNotificationCenter__c/recordTypes/HDT_RT_Default.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Default</fullName>
    <active>true</active>
    <description>RecordType Default</description>
    <label>Default</label>
</RecordType>