force-app/main/default/objects/NewsNotificationCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>EntryChannel__c</columns>
    <columns>Cluster__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>